# isopycnal-interpolation

./: CMakeLists.txt  LICENSE  README.md  ncii.cbp  ncii.depend  ncii.layout  pycnocline.cbp  pycnocline.depend  pycnocline.layout  ropi.cbp  ropi.layout
data/: prep_data.py  prep_data_nc.py
gsw_c_v3.05/: CMakeLists.txt  CMakeLists.txt~  libgswteos-10.so.3.05  makefile
include/: interpolation.hpp  nc_data.hpp  ndarray.hpp  rho.hpp
src/: interpolation.cpp  main.cpp  nc_data.cpp  rho.cpp
